--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,26 @@ dependencies:
   flutter:
     sdk: flutter
 
-  google_fonts:
-  flutter_custom_clippers: ^1.1.2
+  latlng: any
+  map: any
+  google_fonts: any
+  flutter_map: any
+  meet_network_image: any
+  #google_maps_flutter: any
+  #place_picker: ^0.9.18
   #flutter_map: ^0.12.0
+  #geolocator: any
+  #permission_handler: any
+  #provider: any
+  #google_maps_webservice: any
+  #google_api_headers: any
+  #tuple: any
+  #http: ^0.13.0
+
+
+  flutter_custom_clippers: ^1.1.2
+
+
 
 
 
@@ -40,6 +57,8 @@ dev_dependencies:
     sdk: flutter
 
 
+  build_runner: ^1.4.0
+  build_web_compilers: ^2.0.0
 
 
 
