--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sit_lb_2021">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="sit_lb_2021"
         android:icon="@mipmap/ic_launcher">
