--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-
+  fluttertoast: ^8.0.7
+  cloud_firestore: ^2.2.0
   firebase_core: ^1.2.0
   firebase_auth: ^1.2.0
   flutter_advanced_drawer: any
