--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+
+  cloud_firestore_web: ^2.1.1
   fluttertoast: ^8.0.7
   cloud_firestore: ^2.2.0
   firebase_core: ^1.2.0
