--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  select_form_field: ^2.0.0
   cloud_firestore_web: ^2.1.1
   fluttertoast: ^8.0.7
   cloud_firestore: ^2.2.0
