--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  syncfusion_flutter_maps: ^19.1.69-beta
   select_form_field: ^2.0.0
   cloud_firestore_web: ^2.1.1
   fluttertoast: ^8.0.7
